src/snapshots/rlox__test_errors__remaining_tokens.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"print 1; x\")"
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ print 1; x
   │          ┬  
   │          ╰── This should be terminated with ;
   │          │  
   │          ╰── There should be a ; here
───╯


